[package]
name = "rustcn-ui"
version = "0.1.0"
edition = "2021"
authors = ["Aurimar Lopes"]
license = "MIT"
description = "A shadcn-ui for Dioxus Rust Web Framework"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5.0-alpha.0", features = ["web"] }
