[package]
name = "example"
version = "0.1.0"
authors = ["lopes"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

dioxus = { version = "0.5", features = ["fullstack", "router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
rustcn-ui = { version = "0.1.6", path = "../ui" }
dioxus-html = "0.5.1"
wasm-bindgen-futures = "0.4.42"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
